--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,8 @@
-
-dj-database-url==0.5.0
+asgiref==3.4.1
 Django==4.0
-django-cors-headers==3.10.1
 django-filter==21.1
-django-heroku==0.3.1
-gunicorn==20.1.0
+djangorestframework==3.13.1
 Markdown==3.3.6
-psycopy2-binary==2.9.3
-psycopy2==2.9.3
 pytz==2021.3
 sqlparse==0.4.2
 tzdata==2021.5
-whitenoise==5.3.0
